--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -25,10 +25,10 @@ jobs:
           pip3 install -r requirements.txt
       - name: weixin
         env:
-          app_id: ${{ secrets.app_id }}
-          app_secret: ${{ secrets.app_secret }}
-          template_id: ${{ secrets.template_id }}
-          weather_key: ${{ secrets.weather_key }}
-          tian_api: ${{ secrets.tian_api }}
+          APP_ID: ${{ secrets.APP_ID }}
+          APP_SECRET: ${{ secrets.APP_SECRET }}
+          TEMPLATE_ID: ${{ secrets.TEMPLATE_ID }}
+          WEATHER_KEY: ${{ secrets.WEATHER_KEY }}
+          TIAN_API: ${{ secrets.TIAN_API }}
         run: |
           python3 main.py
