--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python  3.10.8
         uses: actions/setup-python@v1
         with:
-          python-version: 3.10.8
+          python-version: "3.10.8"
       - name: Set timezone
         run: |
           cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
