--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: "Checkout codes"
         uses: actions/checkout@v2
-      - name: Set up Python  3.10.8
+      - name: "Set python"
         uses: actions/setup-python@v1
         with:
-          python-version: "3.10.8"
+          python-version: "3.10"
       - name: Set timezone
         run: |
           cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
