--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     #定义名为 build 的作业。 子键将定义作业的属性
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
       - name: "Checkout codes"
         uses: actions/checkout@v2
