--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -1,5 +1,9 @@
 name: weixin
 on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
   schedule:
     # 代表国际标准时间4点0分，北京时间需要+8小时，代表北京时间中午12点运行
